--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -74,7 +74,7 @@ body {
             .gameStart {
                 display: flex;
                 justify-content: center;
-                margin-bottom: 100px;
+                margin-bottom: 150px;
 
                 button {
                     font-family: 'Cabin Sketch', cursive;
@@ -87,6 +87,7 @@ body {
                     width: 40%;
                     margin-top: 25px;
                     background: white;
+                    z-index: 999;
 
                     &:focus,
                     &:active,
@@ -130,10 +131,20 @@ body {
                 background: white;
                 border-radius: 50px;
                 padding: 0.3% 1%;
+                position: relative;
 
                 @include mq-1024 {
                     padding: 5px;
                 }
+            }
+
+            .extra10Seconds {
+                position: absolute;
+                top: -10vh;
+                left: 20vw;
+                background: white;
+                padding: 0.3% 1%;
+                border-radius: 50px;
             }
 
             button {
@@ -145,6 +156,7 @@ body {
                 padding: 0.3% 1%;
                 box-shadow: 5px 5px 0 blue;
                 background: white;
+                z-index: 999;
 
                 &:focus,
                 &:active,
@@ -280,6 +292,7 @@ body {
                 transition: all 0.5s;
                 background: white;
                 margin-bottom: 50px;
+                z-index: 999;
 
                 &:focus,
                 &:active,
