--- a/partials/_mixin.scss
+++ b/partials/_mixin.scss
@@ -9,6 +9,7 @@
         box-shadow: 5px 5px 0 blue;
         transition: all 0.5s;
         background: white;
+        z-index: 999;
 
         &:focus,
         &:active,
