--- a/styles/style.css
+++ b/styles/style.css
@@ -329,6 +329,7 @@ body .descriptionContainer .wrapper .levelContainer button {
   box-shadow: 5px 5px 0 blue;
   transition: all 0.5s;
   background: white;
+  z-index: 999;
 }
 body .descriptionContainer .wrapper .levelContainer button:focus, body .descriptionContainer .wrapper .levelContainer button:active, body .descriptionContainer .wrapper .levelContainer button:hover {
   transform: translate(2.5px, 2.5px);
@@ -349,7 +350,7 @@ body .descriptionContainer .wrapper .levelContainer button:focus, body .descript
 body .descriptionContainer .wrapper .gameStart {
   display: flex;
   justify-content: center;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 body .descriptionContainer .wrapper .gameStart button {
   font-family: "Cabin Sketch", cursive;
@@ -362,6 +363,7 @@ body .descriptionContainer .wrapper .gameStart button {
   width: 40%;
   margin-top: 25px;
   background: white;
+  z-index: 999;
 }
 body .descriptionContainer .wrapper .gameStart button:focus, body .descriptionContainer .wrapper .gameStart button:active, body .descriptionContainer .wrapper .gameStart button:hover {
   transform: translate(2.5px, 2.5px);
@@ -401,12 +403,21 @@ body .gameBoard .clock .timer {
   background: white;
   border-radius: 50px;
   padding: 0.3% 1%;
+  position: relative;
 }
 @media (max-width: 1024px) {
   body .gameBoard .clock .count,
 body .gameBoard .clock .timer {
     padding: 5px;
   }
+}
+body .gameBoard .clock .extra10Seconds {
+  position: absolute;
+  top: -10vh;
+  left: 20vw;
+  background: white;
+  padding: 0.3% 1%;
+  border-radius: 50px;
 }
 body .gameBoard .clock button {
   font-family: "Cabin Sketch", cursive;
@@ -417,6 +428,7 @@ body .gameBoard .clock button {
   padding: 0.3% 1%;
   box-shadow: 5px 5px 0 blue;
   background: white;
+  z-index: 999;
 }
 body .gameBoard .clock button:focus, body .gameBoard .clock button:active, body .gameBoard .clock button:hover {
   transform: translate(2.5px, 2.5px);
@@ -543,6 +555,7 @@ body .gameBoard .result .playAgain {
   transition: all 0.5s;
   background: white;
   margin-bottom: 50px;
+  z-index: 999;
 }
 body .gameBoard .result .playAgain:focus, body .gameBoard .result .playAgain:active, body .gameBoard .result .playAgain:hover {
   transform: translate(4px, 4px);
